# Digital-Twin-City

./: README.md  build_graph.py  check.ipynb  main.py  predict_next.py  pyproject.toml  requirements.txt  simulate.py  train_model.py
data/: city.graphml  city_metadata.json  traffic_simulation.csv
models/: aqi_model.pkl  avg_response_time_model.pkl  evac_lstm.pt  evac_rate_model.pkl  feature_cols.pkl  lstm_scaler_X.pkl  lstm_scaler_y.pkl  metrics.json  traffic_model.pkl
