[project]
name = "digital-twin-city"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "fastapi>=0.135.3",
    "geopandas>=1.1.3",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "osmnx>=2.1.0",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "pyproj>=3.7.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "shapely>=2.1.2",
    "streamlit>=1.56.0",
    "tokenizers>=0.22.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.3",
    "uvicorn[standard]>=0.44.0",
    "xgboost>=3.2.0",
]
